fix alignment not balanced for two-charts

--- a/FIT3179_A2/css/styles.css
+++ b/FIT3179_A2/css/styles.css
@@ -84,7 +84,7 @@ h4 {
 }
 
 .page {
-    max-width: 1300px;
+    max-width: 1100px;
     margin: 0 auto;
     padding: 2rem;
     background-color: var(--bg-color);
@@ -166,6 +166,7 @@ h4 {
     display: flex;
     gap: 1.5rem;
     flex-wrap: wrap; /* Allow wrapping on smaller screens */
+
 }
 
 .two-charts p {
@@ -176,14 +177,14 @@ h4 {
 
 .two-charts .subsection {
     flex: 1;
-    max-width: 48%;
+    width: 48%; 
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .two-charts {
         flex-direction: column;
     }
     .two-charts .subsection {
         max-width: 100%;
     }
-}
+} */
